--- a/Rule.yml
+++ b/Rule.yml
@@ -5,3 +5,4 @@
 - DOMAIN-SUFFIX,csdn.net,Proxy
 - DOMAIN-SUFFIX,csdn.net,Proxy
 - DOMAIN-SUFFIX,blog.csdn.net,Proxy
+- DOMAIN-SUFFIX,pan.baidu.com,Proxy
