--- a/Rule.yml
+++ b/Rule.yml
@@ -3,6 +3,6 @@
 - DOMAIN-SUFFIX,wld.net,DIRECT
 - DOMAIN-SUFFIX,zhihu.com,Proxy
 - DOMAIN-SUFFIX,csdn.net,Proxy
-- DOMAIN-SUFFIX,csdn.net,Proxy
+- DOMAIN-SUFFIX,csdnimg.cn,Proxy
 - DOMAIN-SUFFIX,blog.csdn.net,Proxy
 - DOMAIN-SUFFIX,pan.baidu.com,Proxy
